# SupportFlow

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHECKLIST.md  DEPLOYMENT.md  Dockerfile  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  deploy-docker.sh  docker-compose.yml  nginx.conf  render.yaml  run.bat  run.sh
.github/workflows/: ci-cd.yml
aws/: task-definition.json
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  agent_nodes.py  tools.py  workflow.py
backend/app/api/: __init__.py  stats.py  tickets.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  agent_trace.py  ticket.py  ticket_message.py
backend/app/schemas/: __init__.py  agent_output.py  agent_trace.py  message.py  ticket.py
backend/app/services/: __init__.py  knowledge_base.py  mock_order_api.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/pages/: AdminPage.css  AdminPage.jsx  HomePage.css  HomePage.jsx  TicketDetailPage.css  TicketDetailPage.jsx
frontend/src/services/: api.js
knowledge_base/: account_help.md  product_warranty.md  refund_policy.md  shipping_policy.md
